Fix color of burger and search icon on mobile

--- a/less/style/blocks/mobile-actions.less
+++ b/less/style/blocks/mobile-actions.less
@@ -11,7 +11,7 @@
   justify-content: center;
   padding: 0 @grid-gutter-width/2;
 
-  color: @color-black;
+  color: @color-gray--darker;
   cursor: pointer;
 
   z-index: @z-index-burger-icon;
